fix(tasklist): remove flickering when expanding task
related to CAM-10686

--- a/webapps/ui/tasklist/client/scripts/tasklist/directives/cam-tasklist-tasks.less
+++ b/webapps/ui/tasklist/client/scripts/tasklist/directives/cam-tasklist-tasks.less
@@ -35,7 +35,6 @@
   &.expanded {
     max-height: 2000px;
     padding-bottom: 20px;
-    overflow-y: auto;
     .shutter {
       background: none;
       height: (@grid-gutter-width * 0.5);
